correct border alignment

--- a/docs/app/global.css
+++ b/docs/app/global.css
@@ -87,7 +87,7 @@
   --accent: oklch(0.967 0.001 286.375);
   --accent-foreground: oklch(0.21 0.006 285.885);
   --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(1 0 0);
+  --border: oklch(0.9 0 0);
   --input: oklch(0.92 0.004 286.32);
   --ring: oklch(0.55 0.25 285);
   --chart-1: oklch(0.646 0.222 41.116);
